--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-vercel": "^2.1.1",
-		"@sveltejs/kit": "^1.8.5",
+		"@sveltejs/adapter-vercel": "^2.2.0",
+		"@sveltejs/kit": "^1.9.1",
 		"@types/pg": "^8.6.6",
+		"@types/uuid": "^9.0.1",
 		"sass": "^1.58.3",
 		"svelte": "^3.55.1",
 		"svelte-check": "^3.0.4",
@@ -24,6 +25,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"pg": "^8.9.0"
+		"@aws-sdk/client-dynamodb": "^3.281.0",
+		"pg": "^8.9.0",
+		"uuid": "^9.0.0"
 	}
 }
